Fix contrast issue with some dark themes - replace divider-color with background-modifier-border

--- a/[plugin] Day Planner tweaks.css
+++ b/[plugin] Day Planner tweaks.css
@@ -187,7 +187,7 @@
 }
 
 .status-bar-item.plugin-obsidian-day-planner .day-planner-progress-bar {
-    background:var(--divider-color);
+    background:var(--background-modifier-border);
     transform:translate(0, -1px);
 }
 
