--- a/[ui] Collapsible Right Headers.css
+++ b/[ui] Collapsible Right Headers.css
@@ -9,10 +9,10 @@
     background:
         repeating-linear-gradient(
             135deg, 
-            var(--divider-color) 0px, 
+            var(--background-modifier-border) 0px, 
             transparent 1px,
             transparent 10px,
-            var(--divider-color) 11px, 
+            var(--background-modifier-border) 11px, 
             transparent 11px
         ) !important;
     height:7px;
