--- a/[ui] Custom Separators.css
+++ b/[ui] Custom Separators.css
@@ -44,6 +44,6 @@
     display:block;
     height:1px;
     width:100%;
-    background:linear-gradient(to right, var(--divider-color), transparent);
+    background:linear-gradient(to right, var(--background-modifier-border), transparent);
     margin:0 0 var(--nav-separator-hack-vertical-padding) -8px;
 } */
